--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lyrics-king",
+  "name": "guts-lyric-app",
   "version": "1.0.3",
   "private": true,
   "author": "Stephen Kempin (https://stephenkempin.co.uk/)",
