--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
   "expo": {
     "name": "Guts Lyric App",
-    "description": "Guts Lyric App is a lyrics search app, fetching data from Deezer an Lyrics.ovh. Designed with Adobe XD and built with Expo, by Stephen Kempin. https://github.com/ThatGuySam/Lyric-Example-App",
+    "description": "Guts Lyric App is a lyrics search app, fetching data from Deezer an Lyrics.ovh. Designed with Adobe XD and built with Expo",
     "icon": "./assets/images/icon.png",
-    "slug": "lyrics-king",
+    "slug": "guts-lyric-app",
     "sdkVersion": "32.0.0",
     "platforms": ["ios", "android"],
     "githubUrl":"https://github.com/ThatGuySam/Lyric-Example-App",
@@ -17,14 +17,14 @@
     },
     "extra": {
       "appName": "Guts Lyric App",
-      "developerName": "SK-UK",
+      "developerName": "Sam Carlton Creative",
       "googleAnalytics": "UA-131961084",
       "social": {
-        "expoApp": "https://expo.io/@skempin/lyrics-king",
+        "expoApp": "https://samcarlton.com",
         "github": "https://github.com/ThatGuySam/Lyric-Example-App",
-        "googlePlayStore": "https://play.google.com/store/apps/developer?id=SK+-+UK",
-        "iTunesStore": "https://www.stephenkempin.co.uk",
-        "portfolio": "https://www.stephenkempin.co.uk"
+        "googlePlayStore": "https://samcarlton.com",
+        "iTunesStore": "https://samcarlton.com",
+        "portfolio": "https://samcarlton.com"
       }
     }
   }
