Add Developer info

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "guts-lyric-app",
   "version": "1.0.3",
   "private": true,
-  "author": "Stephen Kempin (https://stephenkempin.co.uk/)",
+  "author": "Sam Carlton",
   "license": "MIT",
   "keywords": [
     "expo",
