--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.0",
     "eslint-plugin-react": "^7.12.4",
     "jest-expo": "^32.0.0",
+    "react-native-scripts": "^2.0.1",
     "react-test-renderer": "16.3.1"
   },
   "main": "./node_modules/expo/AppEntry.js",
